--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apexcharts": "^3.33.0",
     "axios": "^0.25.0",
     "jwt-decode": "^3.1.2",
     "next": "12.0.9",
     "nookies": "^2.5.2",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.49.0"
